welcome.lessons.welcome.methods.returning.MethodsReturning.scala.code
def haveBaggle():Boolean = {
  vau vuBiscuit: Boolean= false 
  
}

def col() {
  for(a<-1 to 6){
    avance()
    if (estSurBiscuit()){
      vuBiscuit= true
    }
  }
  for(a<-1 to 6){
    recule()
  }
  return vuBiscuit
}